@@ -1,4 +1,4 @@
 @echo off
-if not exist "%~dp0console.jar" call "%~dp0build.bat"
-java -jar "%~dp0console.jar"
+if not exist "%~dp0guess-market.jar" call "%~dp0build.bat"
+java --module-path "%~dp0lib\javafx\lib" --add-modules javafx.controls,javafx.fxml --enable-native-access=javafx.graphics -jar "%~dp0guess-market.jar"
 pause
